--- a/index.html
+++ b/index.html
@@ -27,11 +27,61 @@
                                         <tbody>
                                             <tr>
                                                 <td aligne="center" valign="middle">
-                                                    <img src=""
+                                                    <img src="images/logo.png" width="135" height="21" style="display: block;border: 0px;" alt="Logo" />
                                                 </td>
                                             </tr>
                                         </tbody>
                                     </table>
+                                    <!-- end logo -->
+                                    <!-- separator-->
+                                    <table align="left" width="1" height="20"  cellspacing="0" callpading="0" style="border-spacing: 0; table-layout: auto; 
+                                    margin: 0 auto;">
+                                        <tbody>
+                                            <tr>
+                                                <td style="font-size: 0;line-height: 0; border-collapse: collapse;">
+                                                    <p style="padding-left: 24px;">
+                                                        &nbsp;
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!-- end separator -->
+                                    <!-- menu -->
+                                    <table align="right" class="table-full" cellspacing="0" callpading="0" style="border-spacing: 0; table-layout: auto; 
+                                    margin: 0 auto;">
+                                        <tbody>
+                                            <tr>
+                                                <td align="center" style="border-collapse: collapse;">
+                                                    <table width="100%" class="table-full" cellspacing="0" callpading="0" style="border-spacing: 0;table-layout: auto;margin: 0 auto;">
+                                                        <tbody>
+                                                            <tr>
+                                                                <td align="center" style="font-family: 'Open Sans', Tahoma, sans-serif; color: #000000; 
+                                                                font-size: 13px; line-height: 28px; padding-left: 15px; padding-right: 15px; border-collapse: collapse;">
+                                                                    <a href="#" style="color: #306865; text-decoration: none;">
+                                                                        O nas
+                                                                    </a>
+                                                                </td>
+                                                                <td align="center" style="font-family: 'Open Sans', Tahoma, sans-serif; color: #000000; 
+                                                                font-size: 13px; line-height: 28px; padding-left: 15px; padding-right: 15px; border-collapse: collapse;">
+                                                                    <a href="#" style="color: #306865; text-decoration: none;">
+                                                                        Oferta
+                                                                    </a>
+                                                                </td>
+                                                                <td align="center" style="font-family: 'Open Sans', Tahoma, sans-serif; color: #000000; 
+                                                                font-size: 13px; line-height: 28px; padding-left: 15px; padding-right: 15px; border-collapse: collapse;">
+                                                                    <a href="#" style="color: #696969; text-decoration: none;">
+                                                                        Kontakt
+                                                                    </a>
+                                                                </td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!-- end menu -->
                                 </td>
                             </tr>
                             <!-- end right content-->
@@ -47,8 +97,51 @@
             </tr>
         </tbody>
     </table>
-
     <!-- end heading -->
 
+    <!-- banner -->
+    <table align="center" width="100%" border="0" cellspacing="0" callpading="0" bgcolor="#3b3b3b" 
+    style="background-image: url('images/baner.jpg'); background-size: cover; background-position: 50% 50%;
+     border-spacing: 0; table-layout: fixed; margin: 0 auto;">
+        <tbody>
+            <tr>
+                <td height="150" style="border-collapse: collapse;">
+                </td>
+            </tr>
+            <tr>
+                <td align="center" style="border-collapse: collapse;">
+                    <table align="center" style="border-collapse: collapse;" width="580" border="0" cellspacing="0" callpading="0" style="border-spacing: 0;
+                    table-layout: fixed; margin: 0 auto;">
+                        <tbody>
+                            <!-- heading -->
+                            <tr align="center">
+                                <td height="20" style="font-family: Lato,'Open Sans', 
+                                Arial, sans-serif; font-size: 39px; font-weight:300; line-height: 52px;border-collapse: collapse; color:#ffffff;">
+                                    Najnowszy magazyn
+                                </td>
+                            </tr>
+                            <tr align="center">
+                                <td height="20" style="font-family: Lato,'Open Sans', 
+                                Arial, sans-serif; font-size: 39px; font-weight:300; line-height: 52px;border-collapse: collapse; color:#ffffff;">
+                                    Wiosna - Lato
+                                </td>
+                            </tr>
+                            <!-- end heading -->
+                            <tr>
+                                <td height="5" style="border-collapse: collapse;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td height="20" style="border-collapse: collapse;">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+        </tbody>
+
+    </table>
+    <!-- end banner -->
 </body>
 </html>
