banner and under box

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/shtml1-transitional.dtd">
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text-html" charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 </head>
+
 <body style="margin:0; padding:0;">
-    
+
     <!-- heading -->
-    <table align="center" width="90%" border="0" bgcolor="#ffffff" cellspacing="0" callpading="0">
+    <table align="center" width="90%" border="0" bgcolor="#ffffff" cellspacing="0" cellpadding="0">
         <tbody>
             <tr>
                 <td align="center">
-                    <table class="table-outer" width="520" border="0" bgcolor="#ffffff" cellspacing="0" callpading="0">
+                    <table class="table-outer" width="520" bgcolor="#ffffff" border="0" cellspacing="0" cellpadding="0">
                         <tbody>
                             <!-- margin up -->
                             <tr>
@@ -23,18 +25,20 @@
                             <tr>
                                 <td>
                                     <!-- logo -->
-                                    <table align="left" class="table-outer" width="100" border="0" bgcolor="#ffffff" cellspacing="0" callpading="0">
+                                    <table align="left" class="table-outer" width="100" border="0" bgcolor="#ffffff"
+                                        cellspacing="0" cellpadding="0">
                                         <tbody>
                                             <tr>
                                                 <td aligne="center" valign="middle">
-                                                    <img src="images/logo.png" width="135" height="21" style="display: block;border: 0px;" alt="Logo" />
+                                                    <img src="images/logo.png" width="135" height="21" style="display: block;border: 0px;"
+                                                        alt="Logo" />
                                                 </td>
                                             </tr>
                                         </tbody>
                                     </table>
                                     <!-- end logo -->
                                     <!-- separator-->
-                                    <table align="left" width="1" height="20"  cellspacing="0" callpading="0" style="border-spacing: 0; table-layout: auto; 
+                                    <table align="left" width="1" height="20" cellspacing="0" cellpadding="0" style="border-spacing: 0; table-layout: auto; 
                                     margin: 0 auto;">
                                         <tbody>
                                             <tr>
@@ -48,12 +52,13 @@
                                     </table>
                                     <!-- end separator -->
                                     <!-- menu -->
-                                    <table align="right" class="table-full" cellspacing="0" callpading="0" style="border-spacing: 0; table-layout: auto; 
+                                    <table align="right" class="table-full" cellspacing="0" cellpadding="0" style="border-spacing: 0; table-layout: auto; 
                                     margin: 0 auto;">
                                         <tbody>
                                             <tr>
                                                 <td align="center" style="border-collapse: collapse;">
-                                                    <table width="100%" class="table-full" cellspacing="0" callpading="0" style="border-spacing: 0;table-layout: auto;margin: 0 auto;">
+                                                    <table width="100%" class="table-full" cellspacing="0" cellpadding="0"
+                                                        style="border-spacing: 0;table-layout: auto;margin: 0 auto;">
                                                         <tbody>
                                                             <tr>
                                                                 <td align="center" style="font-family: 'Open Sans', Tahoma, sans-serif; color: #000000; 
@@ -100,8 +105,7 @@
     <!-- end heading -->
 
     <!-- banner -->
-    <table align="center" width="100%" border="0" cellspacing="0" callpading="0" bgcolor="#3b3b3b" 
-    style="background-image: url('images/baner.jpg'); background-size: cover; background-position: 50% 50%;
+    <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#000000" style="background-image: url('images/baner.jpg'); background-size: cover; background-position: 50% 50%;
      border-spacing: 0; table-layout: fixed; margin: 0 auto;">
         <tbody>
             <tr>
@@ -110,7 +114,8 @@
             </tr>
             <tr>
                 <td align="center" style="border-collapse: collapse;">
-                    <table align="center" style="border-collapse: collapse;" width="580" border="0" cellspacing="0" callpading="0" style="border-spacing: 0;
+                    <table class="table-outer" align="center" style="border-collapse: collapse;" width="580" border="0"
+                        cellspacing="0" cellpadding="0" style="border-spacing: 0;
                     table-layout: fixed; margin: 0 auto;">
                         <tbody>
                             <!-- heading -->
@@ -135,13 +140,180 @@
                                 <td height="20" style="border-collapse: collapse;">
                                 </td>
                             </tr>
+                            <!-- buttons -->
+                            <tr align="center">
+                                <td style="border-collapse: collapse;">
+                                    <table class="table-full" width="50%" align="center" border="0" cellspacing="0"
+                                        cellpadding="0" style="border-spacing: 0; table-layout: fixed; margin: 0 auto;">
+                                        <tr>
+                                            <td align="center" heigh="36" style="border: 2px solid #ffffff; border-radius: 20px; font-family: 'Open Sans', Tahoma, sans-serif; color: #ffffff; 
+                                            font-size: 13px; font-weight: 600; padding-left: 15px; padding-right: 15px; border-collapse: collapse;">
+                                                <a href="#" style="color: #ffffff; text-decoration: none">
+                                                    Zobacz
+                                                </a>
+                                            </td>
+                                            <td width="25" style="border-collapse: collapse;">
+                                            </td>
+                                            <td align="center" bgcolor="#89d460" heigh="36" style="border-radius: 20px; font-family: 'Open Sans', Tahoma, sans-serif; color: #ffffff; 
+                                            font-size: 13px; font-weight: 600; background-color: #389d460; padding-left: 15px; padding-right: 15px; border-collapse: collapse;">
+                                                <a href="#" style="color: #ffffff; text-decoration: none">
+                                                    Zobacz
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                            <!-- end buttons -->
+                            <!-- separator bottom-->
+                            <tr>
+                                <td height="150" style="border-collapse: collapse;">
+                                </td>
+                            </tr>
+                            <!-- end separator bottom-->
                         </tbody>
                     </table>
                 </td>
             </tr>
         </tbody>
-
     </table>
     <!-- end banner -->
+
+    <!-- box under banner -->
+    <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#ffffff" style="background-color: #ffffff; border-spacing: 0; table-layout: fixed; margin: 0 auto;">
+        <tbody>
+            <tr>
+                <td align="center" style="border-collapse: collapse;">
+                    <table class="table-outer" align="center" width="590" border="0" cellspacing="0" cellpadding="0"
+                        style="border-spacing: 0; table-layout: fixed; margin: 0 auto;">
+                        <tbody>
+                            <tr>
+                                <td height="80" style="border-collapse: collapse;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="border-collapse: collapse;">
+                                    <!-- column -->
+                                    <table class="table-full" align="left" width="195" border="0" cellspacing="0"
+                                        cellpadding="0" style="border-spacing: 0; table-layout: fixed; margin: 0 auto;">
+                                        <tbody style="text-align: center;">
+                                            <tr>
+                                                <td with="195" align="center" valign="middle" style="border-collapse:collapse; line-height: 0px;">
+                                                    <img style="display: block; border: 0px;" alt="icon foto" src="images/box_1_icon.png"
+                                                        width="40" height="44" />
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="10" style="border-collapse: collapse;">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="20" style="font-family: 'Open Sans', Arial, sans-serif; font-size: 16px; font-weight:bold;
+                                                line-height: 28px;border-collapse: collapse; color:#89d460;">
+                                                    Zdjęcia
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="10" style="border-collapse: collapse;">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="20" style="font-family: 'Open Sans', Arial, sans-serif; font-size: 12px; font-weight:lighter;
+                                                border-collapse: collapse; color:#262626; padding: 10 0">
+                                                    Zdjęcia Zdjęcia Zdjęcia Zdjęcia Zdjęcia Zdjęcia Zdjęcia Zdjęcia
+                                                    Zdjęcia Zdjęcia Zdjęcia Zdjęcia
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="30" style="border-collapse: collapse;">
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!-- end column -->
+                                    <!-- column -->
+                                    <table class="table-full" align="left" width="195" border="0" cellspacing="0"
+                                        cellpadding="0" style="border-spacing: 0; table-layout: fixed; margin: 0 auto;">
+                                        <tbody style="text-align: center;">
+                                            <tr>
+                                                <td with="195" align="center" valign="middle" style="border-collapse:collapse; line-height: 0px;">
+                                                    <img style="display: block; border: 0px;" alt="icon foto" src="images/box_2_icon.png"
+                                                        width="40" height="44" />
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="10" style="border-collapse: collapse;">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="20" style="font-family: 'Open Sans', Arial, sans-serif; font-size: 16px; font-weight:bold;
+                                                    line-height: 28px;border-collapse: collapse; color:#89d460;">
+                                                    Icon 
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="10" style="border-collapse: collapse;">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="20" style="font-family: 'Open Sans', Arial, sans-serif; font-size: 12px; font-weight:lighter;
+                                                border-collapse: collapse; color:#262626; padding: 10 0">
+                                                    Icon Icon Icon Icon Icon Icon Icon Icon Icon Icon Icon Icon 
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="30" style="border-collapse: collapse;">
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!-- end column -->
+                                    <!-- column -->
+                                    <table class="table-full" align="left" width="195" border="0" cellspacing="0"
+                                        cellpadding="0" style="border-spacing: 0; table-layout: fixed; margin: 0 auto;">
+                                        <tbody style="text-align: center;">
+                                            <tr>
+                                                <td with="195" align="center" valign="middle" style="border-collapse:collapse; line-height: 0px;">
+                                                    <img style="display: block; border: 0px;" alt="icon foto" src="images/box_3_icon.png"
+                                                        width="40" height="44" />
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="10" style="border-collapse: collapse;">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="20" style="font-family: 'Open Sans', Arial, sans-serif; font-size: 16px; font-weight:bold;
+                                                line-height: 28px;border-collapse: collapse; color:#89d460;">
+                                                    people 
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="10" style="border-collapse: collapse;">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="20" style="font-family: 'Open Sans', Arial, sans-serif; font-size: 12px; font-weight:lighter;
+                                                border-collapse: collapse; color:#262626; padding: 10 0">
+                                                    people people people people peoplepeople people people people people people peoplepeople people
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="30" style="border-collapse: collapse;">
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!-- end column -->
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <!-- end box under banner -->
 </body>
+
 </html>
